# DesktopTerrarium

./: .gitignore  AGENTS.md  Cargo.toml  DOC-RECONCILIATION.md  LICENSE  README.md  deny.toml
.artifacts/: readiness-summary.md
.cargo/: audit.toml  config.toml
.codex/: codex-os.manifest.json  verify.commands
.codex/actions/: _artifact_env.sh
.codex/bootstrap/: tests-docs.v1.json
.codex/scripts/: run_verify_commands.sh
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-rust.yml  git-hygiene.yml  lockfile-rationale.yml  native-perf.yml  perf-enforced.yml  perf-foundation.yml  quality-gates.yml  release-macos.yml
.perf-baselines/: native.json
.perf-results/: native.json
docs/: FIRST-BOOT-AND-NESTED-LAYOUT.md
docs/operations/: asset-import-contract.md  asset-production-brief.md  automation-playbook.md  execution-profiles.md  local-smoke-walkthrough.md  readiness-reporting-template.md  visual-style-bible.md
docs/planning/: README.md  autonomous-handoff-packet.template.md  definition-of-done.template.md  implementation-contract.template.md
docs/release/: current-readiness.md  go-no-go-board.md  macos-binary-release-architecture.md  post-release-checkpoints.md  rollback-runbook.md
scripts/: check_local_artifacts.sh  clean.sh  clean_full_local.sh  clean_heavy_artifacts.sh  run_lean_dev.sh
scripts/env/: with_deterministic_env.sh
scripts/ops/: readiness_summary.sh
scripts/perf/: check-assets.sh  compare-metric.mjs  compare-native-metrics.sh  native-smoke.sh
src/: errors.rs  lib.rs  main.rs
src/events/: mod.rs  (+1 more)
(+43 files in other folders)
