[package]
name = "desktop_terrarium"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15", features = ["wayland"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
rand = "0.10"
dirs = "6"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
metal = { path = "third_party/metal" }
accesskit_windows = { path = "third_party/accesskit_windows" }
